# sample_buddy_ai

./: .gitignore  .replit  LICENSE  README-local-setup.md  README.md  dependencies.txt  package-lock.json  package.json  pyproject.toml  run_tests.py  setup_environment.sh  start_buddy.sh  start_electron_app.js
archive/: audio_processor.py  classifier.py  classifier_test.py  feature_extractor.py  llm_interface.py  models.py
attached_assets/: Pasted--Users-niklasax-Documents-Sample-Buddy-AI-electron-audio-manager-debug-js-67-Uncaught-RangeError-Ma-1747005198945.txt  Pasted-Audio-Sample-Manager-Select-Audio-Files-Choose-Output-Directory-Process-Samples-Categories-Drag-Dr-1746424298366.txt  Pasted-ERROR-Exception-Traceback-most-recent-call-last-File-Users-niklasax-Documents-sample-manage-1746341642838.txt  Pasted-ERROR-Exception-Traceback-most-recent-call-last-File-Users-niklasax-Documents-sample-manage-1746423945264.txt  Pasted-import-os-import-logging-import-datetime-import-json-import-tempfile-import-shutil-from-pathlib-impo-1746341535962.txt  librosa_classifier.py  sample_classification_data.json
electron-audio-manager/: README.md  basic_logger.js  copy_samples.py  fix_paths.js  index.html  loadAllSamples.js  main.js  package-lock.json  package.json  renderer.js  requirements.txt  setup.bat  setup.sh  simple_events.js  start.bat  start.sh  styles.css
static/css/: styles.css
templates/: index.html  layout.html  results.html  samples.html  search.html  visualize.html
tests/: README.md  test_basic_functionality.py  test_similarity_search.py  test_web_app.py
(+26 files in other folders)
