[project]
name = "sample-buddy-ai"
version = "0.1.0"
description = "AI-powered audio sample classifier and management platform"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "langchain-community>=0.3.23",
    "langchain>=0.3.25",
    "librosa>=0.11.0",
    "numpy>=2.2.5",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "openai>=1.77.0",
    "matplotlib>=3.10.1",
    "werkzeug>=3.1.3",
]
